--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="login_button_text">Login</string>
     <string name="logout_button_text">Logout</string>
     <string name="welcome_message">Hi </string>
+    <string name="search_edt_hint">Enter name of repo..</string>
+    <string name="search_btn_text">Search</string>
 </resources>
